[FIX] convert to local links

--- a/example-with-multiple-groups.html
+++ b/example-with-multiple-groups.html
@@ -12,8 +12,8 @@
     <nav aria-label="Section" class="component cpt-subnav">
         <div class="subnav-inner">
             <ul>
-                <li><a href="/entity/open.act?type=page&amp;id=5093b0257f000101357098fc0553bc9f&amp;confId=509068df7f000101357098fcc6e830b6" target="_parent">Accordion Prototype</a></li>	              
-                <li class="current"><a aria-current="true" href="/entity/open.act?type=page&amp;id=522faba37f000101357098fc78b9259f&amp;confId=509068df7f000101357098fcc6e830b6" target="_parent">Multiple Accordion Groups</a></li>	              
+                <li><a href="index.html">Accordion Prototype</a></li>	              
+                <li class="current"><a aria-current="true" href="example-with-multiple-groups.html">Multiple Accordion Groups</a></li>	              
             </ul>  
         </div>
     </nav>    
