[UPDATE] change order of css and js

--- a/example-with-multiple-groups.html
+++ b/example-with-multiple-groups.html
@@ -5,8 +5,8 @@
     <title>
         Example with Multiple Groups
     </title>
-    <link rel="stylesheet" href="css/main.css">
     <script src="js/main.js" defer></script>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body class="tpl-default interior">
     <nav aria-label="Section" class="component cpt-subnav">
@@ -34,7 +34,7 @@
             <div class="accordion-item" id="acc-11-visit-the-github-repo">
                 <h3 class="panel-heading" data-accordion-collapsed="true" id="hdg-11-visit-the-github-repo"><span>Visit the GitHub Repo</span></h3>
                 <div aria-labelledby="hdg-11-visit-the-github-repo" class="accordion-content" role="region">
-                    Clone or download <a href="https://github.com/wjoell/accessible-accordions-csuc2023">the repository</a> for this project.
+                    <p>Clone or download <a href="https://github.com/wjoell/accessible-accordions-csuc2023">the repository</a> for this project.</p>
                 </div>
             </div>
         </div>
